k8s/backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: osiguranje-dev
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/backend: "true"
  podSelector:
    matchLabels:
      network/backend: "true"
