k8s/nginx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  namespace: osiguranje-dev
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/nginx: "true"
  podSelector:
    matchLabels:
      network/nginx: "true"
